# Atlasmith

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: impl-reviewer.md  implementer.md  plan-reviewer.md  planner.md  researcher.md  test-designer.md  verifier.md
.claude/hooks/: enforce-codex-impl.mjs  mirror-guard.mjs  session-start-reminder.mjs
.codex/: hooks.json
.codex/agents/: impl_reviewer.toml  implementer.toml  plan_reviewer.toml  planner.toml  researcher.toml  test_designer.toml  verifier.toml
.codex/hooks/: codex-impl-guard.mjs  mirror-guard.mjs  session-start-reminder.mjs  workspace-guard.mjs
.github/workflows/: ci.yml
.harness/: cadence.json
Docs/agent-guide/: README.md  architecture.md  build-and-verify.md  codex-delegation.md  coding-style.md  model-playbook.md  orchestration.md  technique-core-stack.md  technique-image-io.md  technique-package-manager.md  technique-selection.md
Docs/plans/: 2026-07-10-phase0-1-plan.md  2026-07-14-phase2-plan.md
examples/: make_demo_assets.py
src/atlasmith/: __init__.py  cli.py  types.py
src/atlasmith/bake/: __init__.py  transfer.py
src/atlasmith/io/: __init__.py  image.py  mesh.py
src/atlasmith/metrics/: __init__.py  quality.py
src/atlasmith/pack/: __init__.py  xatlas_naive.py
tests/: conftest.py  test_bake_oracle.py  test_bake_transfer.py  test_cli.py  test_io_mesh.py  test_metrics.py  test_pack_naive.py  test_smoke.py  test_types.py
