[project]
name = "atlasmith"
version = "0.1.0"
description = "Mesh texture rebaking toolkit (UV re-unwrap, atlas packing, bake)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "trimesh>=4.12.2",
    "numpy>=2.4.6",
    "pillow>=12.3.0",
    "xatlas>=0.0.11",
]

[project.scripts]
atlasmith = "atlasmith.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlasmith"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
